Remove dev commands and fix minor issues with interactions